# dt-dataflow-plugin-connection

./: .gitmodules  CMakeLists.txt  vcpkg.json
src/: plugin.cpp
src/connections/: options.hpp  serial_connection.cpp  serial_connection.hpp  tcp_connection.cpp  tcp_connection.hpp  udp_connection.cpp  udp_connection.hpp
src/nodes/: connection_node.cpp  connection_node.hpp  data_viewer_node.cpp  data_viewer_node.hpp  io_context_node.cpp  io_context_node.hpp  serial_node.cpp  serial_node.hpp  serial_options_node.cpp  serial_options_node.hpp  tcp_client_node.cpp  tcp_client_node.hpp  udp_node.cpp  udp_node.hpp  udp_options_node.cpp  udp_options_node.hpp
src/slots/: io_context_slot.cpp  io_context_slot.hpp
